# SZ-Bot

./: .gitignore  README.md  actions.py  components.py  log.json  main.py  pyproject.toml
cogs/Admin/: sort.py  sync.py
cogs/User/: add_roles.py  dictionary.py  games.py  quotes.py  remove_roles.py
cogs/User/Games/: tic_tac_toe.py
cogs/add_roles/: cog.py
cogs/events/: cog.py
cogs/remove_roles/: cog.py
cogs/sorting/: cog.py
cogs/utils/: __init__.py  actions.py  keep_alive.py
utils/: __init__.py  actions.py  components.py  keep_alive.py
