[tool.poetry]
name = "sz-bot"
version = "3.0.0"
description = "Official BOT for Discord's \"Study Zone Server\""
authors = ["Alimus SIfar <alimus.sifar@g.bracu.ac.bd>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0-alpha.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.0"]
