[tool.poetry]
name = "sz-bot"
version = "2.1.1"
description = "Private bot for Discord's 'Study Zone Server'"
authors = ["Alimus Sifar <alimus.sifar@g.bracu.ac.bd>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0"
colorama = ">=0.4.6"
python-dotenv = ">=0.21.0"
Flask = ">=2.2.0"
"discord.py" = {extras = ["voice"], version = "^2.1.0"}

[tool.poetry.dev-dependencies]
replit = "^3.2.4"

[build-system]
requires = ["poetry>=1.1.0"]
